welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: error: value unary_! is not a member of Unit
while (!positionFinale==false){
       ^