welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	def positionFinale {
		while (!estFaceMur){
			avance()
		}
		
	}
while (!positionFinale==false){
	avance()
}
}
